# Menager_Hasel_CPP

./: CMakeLists.txt  Haslo_Manual.cpp  Haslo_Manual.h  README.md  Switch.cpp  Switch.h  Switch_Manual.cpp  Switch_Manual.h  Tomasz_lastdeciphered.txt  Tomasz_passwordhint.txt  generator.cpp  generator.h  generator_manual.cpp  generator_manual.h  haslo.cpp  haslo.h  logo.h  logo.txt  logowanie.cpp  logowanie.h  main.cpp  main.h  printlogo.cpp  printlogo.h
