cmake_minimum_required(VERSION 3.22)
project(Projekt_Semestralny_CPP)

set(CMAKE_CXX_STANDARD 17)

add_executable(Projekt_Semestralny_CPP logowanie.h main.cpp haslo.h generator.h printlogo.h Switch.h Switch_Manual.h Haslo_Manual.h generator_manual.h generator.cpp generator_manual.cpp printlogo.cpp logowanie.cpp Switch.cpp Switch_Manual.cpp haslo.cpp Haslo_Manual.cpp)
